--- a/App.Web/Properties/launchSettings.json
+++ b/App.Web/Properties/launchSettings.json
@@ -1,18 +1,32 @@
 {
-  "profiles": {
-    "App.Web": {
-      "commandName": "Project",
-      "launchBrowser": false,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:7000;http://localhost:54400"
-    },
-    "Mock Lambda Test Tool": {
-      "commandName": "Executable",
-      "commandLineArgs": "--port 5050",
-      "workingDirectory": ".\\bin\\$(Configuration)\\net8.0",
-      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-8.0.exe"
-    }
-  }
+	"profiles": {
+		"App.Web": {
+			"commandName": "Project",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			},
+			"applicationUrl": "https://localhost:7000;http://localhost:54400"
+		},
+		"Mock Lambda Test Tool": {
+			"commandName": "Executable",
+			"executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-8.0.exe",
+			"commandLineArgs": "--port 5050",
+			"workingDirectory": ".\\bin\\$(Configuration)\\net8.0"
+		},
+		"IIS Express": {
+			"commandName": "IISExpress",
+			"launchBrowser": true,
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			}
+		}
+	},
+	"iisSettings": {
+		"windowsAuthentication": false,
+		"anonymousAuthentication": true,
+		"iisExpress": {
+			"applicationUrl": "http://localhost:50256/",
+			"sslPort": 44316
+		}
+	}
 }
